theme fixes:
- rename darktable elegant to darktable-elegant-dark
- add a light theme on top of dark and grey ones
- make colour shifts consistents between the 3 themes
- fix a bug where selected files in filechooserdialog were not highlighted (reported by @cryptomilk)
- fix an issue where thumbnails overlays were too dark (reported by @AxelG-DE)
- declare the filmstrip background colour
- refactor and simplify rules
- TODO: button:hover colours rules are not honoured, find what is messing with them

--- a/data/themes/darktable-elegant-darker.css
+++ b/data/themes/darktable-elegant-darker.css
@@ -18,9 +18,6 @@
 
 @import url("darktable.css");
 
-/* hide frames in lighttable preview and culling */
-@define-color preview_border_color transparent;
-
 /* This has been tested with GTK 3.24 on Gnome */
 
 *
@@ -34,6 +31,7 @@
 #lib-plugin-ui,
 #iop-plugin-ui,
 #lib-modulelist,
+#bauhaus-popup,
 #modules-tabs,
 #left,
 #right,
